--- a/social-media/src/App.scss
+++ b/social-media/src/App.scss
@@ -1,9 +1,9 @@
-body {
+.body {
   margin: 0;
-  font-family: 'Arial', sans-serif;
+  // font-family: 'Arial', sans-serif;
   display: flex;
-  height: 100vh;
-  overflow: hidden;
+  height: 100%;
+ 
 }
 
 .app {
@@ -13,27 +13,25 @@ body {
 
 .content {
   flex: 1;
-  overflow: auto;
+  // overflow: auto;
 }
 
 .sidebar {
   height:100%;
-  background-color: #e0cbcb;
-  color: #fff;
+
   padding: 20px;
   margin-left: 10px;
-  height: 100%;
+ 
 }
 
 .navbar {
-  background-color: #97a1a8;
-  color: #fff;
+ 
   padding: 20px;
-  width: 1100px;
+ 
 }
 
 .body {
   padding: 20px;
-  background-color: rebeccapurple;
+  
 }
 
