--- a/social-media/src/components/Body.scss
+++ b/social-media/src/components/Body.scss
@@ -1,6 +1,107 @@
 .body {
+  display: flex;
 
+  .left {
+    // display: flex;
+    flex-direction: row;
+    margin-right: 20px;
 
-    
-    color: red;
+    .info {
+      display: flex;
+      flex-direction: column;
+
+      .avatar {
+        img#hh {
+          width: 100px;
+          height: 100px;
+          border-radius: 50%;
+          object-fit: cover;
+          transform: translateY(-50%);
+          
+        }
+
+        .con {
+          display: flex;
+          flex-direction: row;
+
+          h3 {
+            margin-bottom: 10px;
+          }
+
+          .flex-column {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            h5 {
+              margin-bottom: 5px;
+            }
+
+            p {
+              color: #666;
+            }
+          }
+
+          .remaining-space {
+            display: flex;
+            flex-direction: row;
+          }
+          
+          .one,
+          .two {
+            flex: 1;
+            border: 1px solid #831b1b; 
+            padding: 10px;
+          }
+          
+        
+          .one {
+            background-color: #1b6ea5
+            // color: #fff;
+          }
+          
+          .two {
+            background-color: #1abc9c; 
+            color: #fff;
+          }
+          
+        }
+      }
+    }
+  }
+
+  .right {
+    flex: 1;
+
+    .shortcuts,
+    .contacts,
+    .groups {
+      margin-top: 20px;
+      text-align: left;
+      margin-bottom: 20px;
+
+      h3 {
+        margin-bottom: 10px;
+      }
+
+      .shortcut-item,
+      .contact-item,
+      .group-item {
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+
+        img {
+          border-radius: 50%;
+          object-fit: cover;
+          margin-right: 10px;
+        }
+
+        span {
+          // font-weight: bold;
+        }
+      }
+    }
+  }
 }
+
