--- a/social-media/src/components/Navbar.scss
+++ b/social-media/src/components/Navbar.scss
@@ -3,8 +3,8 @@
     align-items: center;
     justify-content: space-around;
     padding: 10px 20px;
-    background-color: #cdd8df;
-    color: #fff;
+    color:black;
+    width: 100%;
   }
   
   .navbar input {
@@ -13,8 +13,8 @@
     border-radius: 4px;
     margin-right: 10px;
     font-size: 16px;
-    color: #333; /* Text color for the search input */
-    background-color: #fff; /* Background color for the search input */
+    
+   
   }
   
   .cons {
