--- a/social-media/src/components/Sidebar.scss
+++ b/social-media/src/components/Sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar {
-  background-color: #333;
-  color: white;
+
+  color: rgb(54, 52, 52);
   padding: 20px;
   display: flex;
   flex-direction: column;
