--- a/social-media/src/components/Body.scss
+++ b/social-media/src/components/Body.scss
@@ -1,107 +1,103 @@
 .body {
   display: flex;
+  justify-content: space-between;
+  padding: 20px; 
+}
 
-  .left {
-    // display: flex;
+.left {
+  flex: 1;
+  padding: 20px;  
+  background-color: #f0f0f0;  
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+.flex-column {
+  display: flex;
+  flex-direction: row;
+}
+ 
+}
+
+.avatar {
+  display: flex;
+ 
+ 
+}
+#hh {
+  transform: translate(-50); 
+
+}
+
+.avatar img {
+  width: 100px;  
+  height: 100px;  
+  border-radius: 50%;  
+
+ 
+}
+
+.con {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.remaining-space {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px; 
+
+.one {
+  flex: 1;
+}
+
+
+.intro {
+  margin-top: 20px; 
+
+  p {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 10px; 
+  }
+
+  div {
+    display: flex;
+  
+
+    img {
+      width: 30px;  
+      height: 30px;  
+      margin-right: 10px;  
+    }
+
+    p {
+      font-size: 14px;
+      color: #555;
+    }
+  }
+}
+
+.two {
+  
+  margin-top: 20px; 
+
+  h2 {
+    font-size: 24px;
+    color: #333;
+  }
+  .ph {
+    display: flex;
     flex-direction: row;
-    margin-right: 20px;
-
-    .info {
-      display: flex;
-      flex-direction: column;
-
-      .avatar {
-        img#hh {
-          width: 100px;
-          height: 100px;
-          border-radius: 50%;
-          object-fit: cover;
-          transform: translateY(-50%);
-          
-        }
-
-        .con {
-          display: flex;
-          flex-direction: row;
-
-          h3 {
-            margin-bottom: 10px;
-          }
-
-          .flex-column {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-
-            h5 {
-              margin-bottom: 5px;
-            }
-
-            p {
-              color: #666;
-            }
-          }
-
-          .remaining-space {
-            display: flex;
-            flex-direction: row;
-          }
-          
-          .one,
-          .two {
-            flex: 1;
-            border: 1px solid #831b1b; 
-            padding: 10px;
-          }
-          
-        
-          .one {
-            background-color: #1b6ea5
-            // color: #fff;
-          }
-          
-          .two {
-            background-color: #1abc9c; 
-            color: #fff;
-          }
-          
-        }
-      }
-    }
   }
+}
 
-  .right {
-    flex: 1;
-
-    .shortcuts,
-    .contacts,
-    .groups {
-      margin-top: 20px;
-      text-align: left;
-      margin-bottom: 20px;
-
-      h3 {
-        margin-bottom: 10px;
-      }
-
-      .shortcut-item,
-      .contact-item,
-      .group-item {
-        display: flex;
-        align-items: center;
-        margin-bottom: 10px;
-
-        img {
-          border-radius: 50%;
-          object-fit: cover;
-          margin-right: 10px;
-        }
-
-        span {
-          // font-weight: bold;
-        }
-      }
-    }
-  }
+.right {
+  flex: 1;
+  padding: 20px; 
+  background-color: #e0e0e0; 
+}
 }
 
