added see all button

--- a/social-media/src/Layout/Main.scss
+++ b/social-media/src/Layout/Main.scss
@@ -3,7 +3,8 @@
     display: flex;
     gap: 24px;
     width: 100vw;
-    // overflow-x: hidden;
+    overflow-x: hidden;
+    // background-color: aqua;
     .sidebar{
       
         position: fixed;
