--- a/social-media/src/Layout/MainContent.scss
+++ b/social-media/src/Layout/MainContent.scss
@@ -1,7 +1,7 @@
 .main-right-content{
     display: flex;
     flex-wrap: wrap;
-    background-color: #F8FAFC;
+    // background-color:green;
     .middle-content{
         flex: 6;
         margin: 10px;
