--- a/social-media/src/components/SideProfile.scss
+++ b/social-media/src/components/SideProfile.scss
@@ -3,6 +3,7 @@
     gap: 5px;
     justify-content: center;
     align-items: center;
+    // background-color: purple;
     .leftprofile {
       padding: 1px;
       margin-right: 90px;
