--- a/social-media/src/components/sideItems.scss
+++ b/social-media/src/components/sideItems.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   padding: 10px 20px;
+  // background-color: aqua;
 
   text-transform: capitalize;
   font-size: 12px;
