stylling on side bar

--- a/social-media/src/Layout/RightBar.scss
+++ b/social-media/src/Layout/RightBar.scss
@@ -1,7 +1,7 @@
 .RightContent{
     display: flex;
     // flex: 6;
-    background-color: rgb(230, 105, 105);
+    // background-color: rgb(230, 105, 105);
     padding: 1rem;
     width: 20vw;
     gap: 10px;
