--- a/social-media/src/components/RightContent.scss
+++ b/social-media/src/components/RightContent.scss
@@ -69,8 +69,8 @@
   
         img {
           border-radius: 50%;
-          width:50px; 
-          height: 50px; 
+          // width:50px; 
+          // height: 50px; 
         }
   
         .info {
