added more scss

--- a/social-media/src/Layout/Navbar.scss
+++ b/social-media/src/Layout/Navbar.scss
@@ -31,6 +31,7 @@
             justify-content: space-between;
             align-items: center;
             gap: 10px;
+            // width: 30px;
             .profile {
                 display: inline-flex;
                 align-items: center;
