--- a/social-media/src/App.scss
+++ b/social-media/src/App.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-
+.all{
+    width: 100px;
+}
 
 * {
     box-sizing: border-box;
@@ -12,7 +14,7 @@
     }
 
     .social-media{
-        background-color: #F8FAFC;
+      
         width: 100vw;
     }
 }
