--- a/social-media/src/components/CenterContent.scss
+++ b/social-media/src/components/CenterContent.scss
@@ -10,7 +10,7 @@
   }
   
   .profile {
-    background-color: white;
+    background-color:aliceblue;
     padding: 1rem;
     display: flex;
     flex-direction: column;
@@ -35,7 +35,7 @@
   }
   
   .description {
-        background-color: white;
+        background-color: aliceblue;
         padding: 1rem;
         display: flex;
         flex-direction: column;
@@ -79,7 +79,7 @@
   
   .gallery {
     text-align: center;
-    background-color: white;
+    background-color: aliceblue;
     padding: 1rem;
     display: flex;
     flex-direction: column;
@@ -91,6 +91,10 @@
         display: flex;
         justify-content: space-around;
         margin-top: 15px;
+        flex-direction:row;
+        .see-all {
+          background-color: aqua;
+        }
 
       h4 {
         font-size: 20px;
