--- a/social-media/src/Layout/MainContent.scss
+++ b/social-media/src/Layout/MainContent.scss
@@ -6,7 +6,8 @@
         flex: 6;
         margin: 10px;
         width: 60vw; 
-        margin-left: 260px;
+        margin-left: 0px;
+        margin-right: 280px;
 
 
     }
