--- a/social-media/src/Layout/Main.scss
+++ b/social-media/src/Layout/Main.scss
@@ -5,7 +5,7 @@
     gap: 24px;
     width: 100vw;
     overflow-x: hidden;
-    // background-color: aqua;
+    position: absolute;
     
     .sidebar{
       
