--- a/social-media/src/Pages/Groupsx.scss
+++ b/social-media/src/Pages/Groupsx.scss
@@ -1,3 +1,174 @@
-.Groupsx {
-    background-color: green;
-}
+.all {
+   width: 800px;
+  }
+  .popgroup
+  {display: flex;
+  flex-direction: row;}
+  
+  .above {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+  
+    h1 {
+      font-size: 24px;
+    }
+  
+    img {
+      width: 20px;
+      height: 20px;
+    }
+  
+    #ff {
+      // background-color: #4CAF50;
+      color: rgb(190, 182, 182);
+      padding: 8px 16px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 14px;
+  
+      &:hover {
+        background-color: #45a049;
+      }
+    }
+  }
+  
+  .part {
+    margin-top: 20px;
+  
+    h5 {
+      font-size: 18px;
+    }
+  
+    p {
+      font-size: 14px;
+      color: #555;
+    }
+  }
+  .groupmgs{
+    display: flex;
+    flex-direction: row;
+    gap:3rem;
+  }
+  .next1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    
+  
+    .next {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      align-items: center;
+  
+      .con {
+        margin-right: 20px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 0.10rem;
+        .infonext{
+          display: flex;
+          flex-direction: column;
+        }
+        .imgjoin{
+          display: flex;
+          flex-direction: row;
+          gap: 3rem;
+        }
+
+  
+        img {
+          width: 40px;
+          height: auto;
+        }
+  
+        h5 {
+          font-size: 16px;
+          margin-top: 10px;
+        }
+  
+        p {
+          font-size: 14px;
+          color: #555;
+        }
+      }
+  
+      img {
+        width: 300px;
+        height: auto;
+      }
+    }
+  
+    .join {
+      display: flex;
+      align-items: center;
+      .joinone{
+        display: flex;
+        flex-direction: row;
+        gap: 3rem;
+      }
+  
+      button {
+        // background-color: #4CAF50;
+        color: white;
+        padding: 8px 16px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 14px;
+        margin-right: 20px;
+  
+        &:hover {
+          background-color: #45a049;
+        }
+      }
+  
+      img {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+      }
+    }
+  }
+
+  
+  .next3 {
+    margin-top: 20px;
+  
+    h5 {
+      font-size: 18px;
+    }
+  }
+  
+  .ee {
+    p {
+      font-size: 14px;
+      color: #555;
+    }
+  }
+  
+  .hh {
+    margin-top: 20px;
+  
+    p {
+      font-size: 14px;
+      color: #555;
+    }
+  }
+  
+  .botton {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+  
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+  
