--- a/social-media/src/Pages/Friendsx.scss
+++ b/social-media/src/Pages/Friendsx.scss
@@ -6,7 +6,7 @@
   position: absolute;
   margin-right: 50px;
   width: 800px;
-  height: 100px;
+  // height: 100px;
   // background-color: aliceblue;
 }
 
