--- a/social-media/src/Layout/Main.scss
+++ b/social-media/src/Layout/Main.scss
@@ -4,6 +4,7 @@
     gap: 24px;
     width: 100vw;
     overflow-x: hidden;
+    // overflow-y: scroll;
   
     .sidebar {
       position: fixed;
@@ -13,7 +14,10 @@
     }
   
     .main-content {
-      width: 80vw;
+      // width: 80vw;
+      // flex: 1; 
+      // overflow-y: auto; 
+      // padding: 20px; 
   
       a {
         text-decoration: none;
