--- a/social-media/src/Layout/MainContent.scss
+++ b/social-media/src/Layout/MainContent.scss
@@ -1,6 +1,7 @@
 .main-right-content{
     display: flex;
     flex-wrap: wrap;
+    // overflow-x: hidden;
     // background-color:green;
     .middle-content{
         flex: 6;
