--- a/social-media/src/Layout/RightBar.scss
+++ b/social-media/src/Layout/RightBar.scss
@@ -5,7 +5,7 @@
     padding: 1rem;
     width: 20vw;
     gap: 10px;
-    height: 100%;
+    // height: 100%;
     position: fixed;
     right: 0;
     .rightSide{
