--- a/social-media/src/Pages/Notification.scss
+++ b/social-media/src/Pages/Notification.scss
@@ -4,7 +4,9 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  backdrop-filter: blur(5px);
+  background-color: rgba(0, 0, 0, 0.8);
+
+  
   display: flex;
   justify-content: center;
   align-items: center;
