added more images on photos page

--- a/social-media/src/components/Contacts.scss
+++ b/social-media/src/components/Contacts.scss
@@ -1,7 +1,7 @@
 .Contacts {
   display: flex;
   flex-direction: column;
-
+  margin-top: 0;
   .Heading {
     display: flex;
     flex-direction: row;
@@ -22,7 +22,7 @@
   }
   .see-all {
     p{
-      background-color: aqua;
+      // background-color: aqua;
     }
   }
 
