--- a/social-media/src/Pages/Photos.scss
+++ b/social-media/src/Pages/Photos.scss
@@ -14,6 +14,7 @@
     display: flex;
     margin-bottom: 20px;
     gap: 4rem;
+    margin-right: 4rem;
   
     p {
       font-size: 16px;
@@ -42,7 +43,7 @@
   .images {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+    gap: 5px;
   
     img {
       width: 80%;
