events page responsiveness

--- a/social-media/src/Layout/Main.scss
+++ b/social-media/src/Layout/Main.scss
@@ -1,5 +1,6 @@
 .main {
     margin-top: 88px;
+    margin-left: 18vw;
     display: flex;
     gap: 24px;
     width: 100vw;
@@ -21,8 +22,24 @@
   
       a {
         text-decoration: none;
-        color: inherit;
+        // color: inherit;
+        border: 2px solid blue;
       }
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .main {
+        flex-direction: column; 
+    }
+  
+    .main .sidebar,
+    .main .rightbar {
+        display: none; 
+    }
+  
+    .main .main-content {
+        width: 100%; 
+        padding: 10px; 
     }
   }
   
