--- a/social-media/src/Layout/CenterBody.scss
+++ b/social-media/src/Layout/CenterBody.scss
@@ -1,7 +1,16 @@
-.center-body{
+.center-body {
     display: flex;
     gap: 15px;
     // margin-right: 250px;
-    // overflow-x: hidden;
-    // overflow: scroll;
+    overflow-x: hidden;
+    overflow: scroll;
+}
+
+
+@media screen and (max-width: 768px) {
+    .center-body {
+        flex-direction: column; 
+        margin-right: 0; 
+        overflow: auto; 
+    }
 }
