--- a/social-media/src/Layout/MainContent.scss
+++ b/social-media/src/Layout/MainContent.scss
@@ -8,7 +8,7 @@
         margin: 10px;
         width: 60vw; 
         margin-left: 0px;
-        margin-right: 280px;
+        // margin-right: 280px;
 
 
     }
