--- a/social-media/src/Pages/Photos.scss
+++ b/social-media/src/Pages/Photos.scss
@@ -1,60 +1,82 @@
-.photobum{
-    margin-right: 280px;
+.photobum {
+  margin-right: 280px;
 }
+
 .yourphotos {
-    // text-align: center;
-    margin-bottom: 20px;
-  
-    h1 {
-      font-size: 24px;
-    }
+  margin-bottom: 20px;
+}
+
+.yourphotos h1 {
+  font-size: 24px;
+}
+
+.photos-content {
+  display: flex;
+  margin-bottom: 20px;
+  gap: 4rem;
+  margin-right: 4rem;
+}
+
+.photos-content p {
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.photos-content p:hover {
+  text-decoration: underline;
+}
+
+.total {
+  margin-bottom: 20px;
+}
+
+.total h5 {
+  font-size: 18px;
+}
+
+.total p {
+  font-size: 14px;
+  color: #555;
+}
+
+.images {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5px;
+}
+
+.images img {
+  width: 80%;
+  height: auto;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.images img:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+/* Media query for mobile view */
+@media screen and (max-width: 768px) {
+  .photobum {
+      margin-right: 5px;
   }
-  
+
   .photos-content {
-    display: flex;
-    margin-bottom: 20px;
-    gap: 4rem;
-    margin-right: 4rem;
-  
-    p {
-      font-size: 16px;
-      cursor: pointer;
-  
-      &:hover {
-        text-decoration: underline;
-      }
-    }
+      margin-top: 10px;
+      flex-direction: row; 
+      margin-right: 0;
   }
-  
-  .total {
-    
-    margin-bottom: 20px;
-  
-    h5 {
-      font-size: 18px;
-    }
-  
-    p {
-      font-size: 14px;
-      color: #555;
-    }
+
+  .photos-content p {
+      font-size: 14px; 
   }
-  
+
   .images {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 5px;
-  
-    img {
-      width: 80%;
-      height: auto;
-      border-radius: 8px;
-      cursor: pointer;
-  
-      &:hover {
-        transform: scale(1.1);
-        transition: transform 0.3s ease-in-out;
-      }
-    }
+      grid-template-columns: repeat(2, 1fr); /* Adjust grid for better display on mobile */
   }
-  
+  .total {
+    margin: 2rem;
+  }
+}
