--- a/social-media/src/components/CenterContent.scss
+++ b/social-media/src/components/CenterContent.scss
@@ -118,4 +118,9 @@
       }
     }
   }
-  
+  @media screen and (max-width: 768px) {
+    .content {
+        width: 100%;
+        padding: 10px; 
+    }
+}
