--- a/social-media/src/Pages/Timeline.scss
+++ b/social-media/src/Pages/Timeline.scss
@@ -2,18 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
-  // margin-right: 60px;
+  margin-right: 260px;
+
   h3 {
     font-size: 24px;
     margin-bottom: 30px;
-    // margin-right: 600px;
+    margin-right: 600px;
     margin-top: 30px;
   }
 
   .FriendsMenu {
     display: flex;
-    // flex-wrap: wrap;
+    flex-wrap: wrap;
     justify-content: center;
 
     .FriendsContainer {
@@ -39,9 +39,8 @@
 
   .content-right {
     width: 100%;
-    max-width: 800px; 
+    max-width: 800px; // Adjust as needed
     margin-top: 20px;
-
 
     .top-section {
       display: flex;
@@ -76,6 +75,7 @@
 
       .img {
         text-align: center;
+
 
         img {
           width: 30px;
@@ -118,14 +118,18 @@
 
       .post-images {
         display: flex;
-        flex-direction: raw;
-        // flex-wrap: wrap;
         margin-top: 10px;
+        width: 80;
+        height: 40;
+        #imgs{
+          width: 400px;
+          height: 100px;
+        }
 
         img {
-          width: 50%;
-          // height: 50%;
-          // object-fit: cover;
+          width: 100px;
+          height: 100px;
+          object-fit: cover;
           margin-right: 10px;
           border-radius: 8px;
         }
@@ -185,7 +189,6 @@
     }
   }
 }
-
 /* Media query for mobile view */
 @media screen and (max-width: 768px) {
   .Timeline {
