--- a/social-media/src/Pages/Timeline.scss
+++ b/social-media/src/Pages/Timeline.scss
@@ -122,8 +122,9 @@
         width: 80;
         height: 40;
         #imgs{
-          width: 400px;
+          width: 280px;
           height: 100px;
+          align-items: center;
         }
 
         img {
@@ -226,8 +227,8 @@
   }
 
   .content-right .post-info .post-images img {
-    width: 80px; 
-    height: 80px;
+    width: 50px; 
+    height: 50px;
     margin-right: 5px;
     margin-bottom: 5px;
     display: flex;
